<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_altas"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="170dp"
        android:onClick="abrirActivities"
        android:rotationX="1"
        android:text="@string/btn_modulo_altas_alumnos"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_bajas"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="72dp"
        android:onClick="abrirActivities"
        android:text="@string/btn_modulo_bajas_alumnos"
        app:icon="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cambios"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginStart="67dp"
        android:layout_marginBottom="294dp"
        android:onClick="abrirActivities"
        android:text="@string/btn_modulo_cambios_alumnos"
        app:icon="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_consultas"
        android:layout_width="114dp"
        android:layout_height="94dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="294dp"
        android:onClick="abrirActivities"
        android:text="@string/btn_modulo_consultas_alumnos"
        app:icon="@android:drawable/ic_menu_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="268dp"
        android:layout_height="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="186dp"
        android:background="#F30606"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btn_cerrar_Sesion"
        app:icon="@android:drawable/presence_offline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>